tooltip: fix slot="content" layout issue

--- a/src/components/tooltip/tooltip.css
+++ b/src/components/tooltip/tooltip.css
@@ -1,7 +1,3 @@
-:host [slot="content"] {
-  position: fixed;
-}
-
 #tooltip {
   position: fixed;
   display: block;
@@ -143,109 +139,67 @@
 }
 
 :host([position="top"]) #tooltip {
-  margin-bottom: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px
-  );
+  margin-bottom: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px);
 }
 :host([position="top"]) #tooltip[hidden] {
-  margin-bottom: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 10px
-  );
+  margin-bottom: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 10px);
 }
 :host([position="top"]) #tooltip:before {
   top: 100%;
-  border-top-color: var(
-    --tooltip-border-color,
-    var(--tooltip-background, rgba(0, 0, 0, 0.85))
-  );
+  border-top-color: var(--tooltip-border-color, var(--tooltip-background, rgba(0, 0, 0, 0.85)));
 }
 
 :host([position="bottom"]) #tooltip {
-  margin-top: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px
-  );
+  margin-top: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px);
 }
 :host([position="bottom"]) #tooltip[hidden] {
-  margin-top: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 10px
-  );
+  margin-top: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 10px);
 }
 :host([position="bottom"]) #tooltip:before {
   bottom: 100%;
-  border-bottom-color: var(
-    --tooltip-border-color,
-    var(--tooltip-background, rgba(0, 0, 0, 0.85))
-  );
+  border-bottom-color: var(--tooltip-border-color, var(--tooltip-background, rgba(0, 0, 0, 0.85)));
 }
 
 :host([position="start"][dir="ltr"]) #tooltip {
-  margin-right: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px
-  );
+  margin-right: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px);
 }
 :host([position="start"][dir="ltr"]) #tooltip[hidden] {
-  margin-right: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px
-  );
+  margin-right: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px);
 }
 :host([position="start"][dir="ltr"]) #tooltip:before {
   left: 100%;
-  border-left-color: var(
-    --tooltip-border-color,
-    var(--tooltip-background, rgba(0, 0, 0, 0.85))
-  );
+  border-left-color: var(--tooltip-border-color, var(--tooltip-background, rgba(0, 0, 0, 0.85)));
 }
 
 :host([position="start"][dir="rtl"]) #tooltip {
-  margin-left: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px
-  );
+  margin-left: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px);
 }
 :host([position="start"][dir="rtl"]) #tooltip[hidden] {
-  margin-left: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px
-  );
+  margin-left: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px);
 }
 :host([position="start"][dir="rtl"]) #tooltip:before {
   right: 100%;
-  border-right-color: var(
-    --tooltip-border-color,
-    var(--tooltip-background, rgba(0, 0, 0, 0.85))
-  );
+  border-right-color: var(--tooltip-border-color, var(--tooltip-background, rgba(0, 0, 0, 0.85)));
 }
 
 :host([position="end"][dir="ltr"]) #tooltip {
-  margin-left: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px
-  );
+  margin-left: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px);
 }
 :host([position="end"][dir="ltr"]) #tooltip[hidden] {
-  margin-left: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px
-  );
+  margin-left: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px);
 }
 :host([position="end"][dir="ltr"]) #tooltip:before {
   right: 100%;
-  border-right-color: var(
-    --tooltip-border-color,
-    var(--tooltip-background, rgba(0, 0, 0, 0.85))
-  );
+  border-right-color: var(--tooltip-border-color, var(--tooltip-background, rgba(0, 0, 0, 0.85)));
 }
 
 :host([position="end"][dir="rtl"]) #tooltip {
-  margin-right: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px
-  );
+  margin-right: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px);
 }
 :host([position="end"][dir="rtl"]) #tooltip[hidden] {
-  margin-right: calc(
-    var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px
-  );
+  margin-right: calc(var(--tooltip-arrow-size, 7px) + var(--tooltip-offset, 0px) + 3px + 10px);
 }
 :host([position="end"][dir="rtl"]) #tooltip:before {
   left: 100%;
-  border-left-color: var(
-    --tooltip-border-color,
-    var(--tooltip-background, rgba(0, 0, 0, 0.85))
-  );
+  border-left-color: var(--tooltip-border-color, var(--tooltip-background, rgba(0, 0, 0, 0.85)));
 }
